# modulate

./: .gitignore  Cargo.toml
modulate_bin/: Cargo.toml
modulate_bin/src/: main.rs
modulate_lib/: Cargo.toml
modulate_lib/src/: lib.rs  mod.rs  node.rs
