[package]
name = "modulate_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7.0" , features = ["v4", "serde"] }
slotmap = "1.0.6"
thiserror = "1.0.50"
semver = {  version = "1.0.21", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
log = "0.4"
