[package]
name = "modulate_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7" , features = ["v4", "serde"] }
slotmap = "1.0"
thiserror = "1.0"
semver = {  version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = "1.3"
log = "0.4"
